--- a/.github/workflows/master_fcote-admin.yml
+++ b/.github/workflows/master_fcote-admin.yml
@@ -52,13 +52,13 @@ jobs:
               })
 
 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            . 
-            !venv/
+      # - name: Upload artifact for deployment jobs
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: python-app
+      #     path: |
+      #       . 
+      #       !venv/
 
   deploy:
     runs-on: ubuntu-latest
